fix alignment of code and line numbers in FF

--- a/static/static/css/style.css
+++ b/static/static/css/style.css
@@ -389,6 +389,7 @@ table.code td {
   padding: 0;
   margin: 0;
   background-color: #f5f5f5;
+  vertical-align: middle;
 }
 pre.linenums {
   margin: 0;
